Kubernetes/Backend Application/LSQ/K8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: association-backend
  template:
    metadata:
      labels:
        app: association-backend
    spec:
      containers:
      - name: backend-container
        image: aishwaryakr/association-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5248
