Kubernetes/Backend Application/LSQ/K8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: association-backend
  ports:
  - name: http
    port: 80
    targetPort: 5248
