Kubernetes/Backend Application/LSQ/K8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: association.backend.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: backend-service
            port:
              number: 80
